--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "homepage": "https://gitlab.com/codersstudio/notifications",
     "keywords": ["Laravel", "Notifications"],
     "require": {
-        "illuminate/support": "~5"
+        "illuminate/support": "~5",
+        "laravel-notification-channels/telegram" : "*"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
