--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "codersstudio/notifications",
-    "description": "Laravel notifications base package",
+    "description": "notifications base package",
     "license": "MIT",
     "authors": [
         {
@@ -9,11 +9,10 @@
             "homepage": "https://coders.studio"
         }
     ],
-    "homepage": "https://github.com/imjonos/laravel-notifications",
+    "homepage": "https://gitlab.com/codersstudio/notifications",
     "keywords": ["Laravel", "Notifications"],
     "require": {
-        "illuminate/support": "~5",
-        "laravel-notification-channels/telegram" : "*"
+        "illuminate/support": "~5"
     },
     "require-dev": {
         "phpunit/phpunit": "~7.0",
